# pistachio-python

./: .gitignore  README.md  pyproject.toml
pistachio/: __init__.py  pistachio.py  test_pistachio.py
