[tool.poetry]
name = "pistachio"
version = "0.1.0"
description = "Python package for accessing the Pistachio REST API"
authors = ["Kobi Felton <kcmf2@cam.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
