[tool.poetry]
name = "pistachio"
version = "0.1.0"
description = "Python package for accessing the Pistachio REST API"
authors = ["Kobi Felton <kcmf2@cam.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
pytest = "^6.2.4"
ipython = "^7.23.1"
ipykernel = "^5.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
